// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Snapshot Tests should match snapshot - error toast 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#E01E1E",
      "borderRadius": 8,
      "elevation": 5,
      "flexDirection": "row",
      "gap": 10,
      "left": "10%",
      "padding": 15,
      "position": "absolute",
      "right": "10%",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
      "top": 54,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "width": 300,
      "zIndex": 999,
    }
  }
>
  <View
    testID="icon-caution"
  >
    <Text>
      caution
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "width": "100%",
        }
      }
    >
      Error message
    </Text>
  </View>
</View>
`;

exports[`Toast Snapshot Tests should match snapshot - not visible 1`] = `null`;

exports[`Toast Snapshot Tests should match snapshot - success toast 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#4CD964",
      "borderRadius": 8,
      "elevation": 5,
      "flexDirection": "row",
      "gap": 10,
      "left": "10%",
      "padding": 15,
      "position": "absolute",
      "right": "10%",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
      "top": 54,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "width": 300,
      "zIndex": 999,
    }
  }
>
  <View
    testID="icon-success"
  >
    <Text>
      success
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "width": "100%",
        }
      }
    >
      Success message
    </Text>
  </View>
</View>
`;

exports[`Toast Snapshot Tests should match snapshot - warning toast 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FF9800",
      "borderRadius": 8,
      "elevation": 5,
      "flexDirection": "row",
      "gap": 10,
      "left": "10%",
      "padding": 15,
      "position": "absolute",
      "right": "10%",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
      "top": 54,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "width": 300,
      "zIndex": 999,
    }
  }
>
  <View
    testID="icon-info-white"
  >
    <Text>
      info-white
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "width": "100%",
        }
      }
    >
      Warning message
    </Text>
  </View>
</View>
`;
